[package]
name = "lorawan-sniffer"
version = "0.1.5"
authors = ["lthiery <me@louisthiery.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
structopt = { version = "0.3.2", default-features = false }
lorawan-encoding = { git = "https://github.com/ivajloip/rust-lorawan.git", rev = "f1c67e11"}
helium-console = { git = "https://github.com/helium/helium-console-cli" }
semtech-udp = { git = "https://github.com/lthiery/semtech-udp", rev = "6a547028" }
base64 = "0.12.0"
mio = "0.6"
aes = "0.3.2"
serde =  "1"
serde_derive = "1"
serde_json = "1"
hex = "0.4"
toml = "0.5"
chrono = "0.4"
