[package]
name = "lorawan-sniffer"
version = "0.2.4"
authors = ["lthiery <thiery.louis@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
tokio = { version = "0", features = ["full"] }
structopt = { version = "0", default-features = false }
lorawan-encoding = { git = "https://github.com/helium/rust-lorawan.git", features = ["full"], branch = "lthiery/cflist-types"}
helium-console = { git = "https://github.com/helium/helium-console-cli" }
semtech-udp = { version = "0.7" }
base64 = "0"
mio = "0.6"
serde =  "1"
serde_derive = "1"
serde_json = "1"
hex = "0"
toml = "0"
chrono = "0"
num-format = "0"
csv = "1"
